tests/baselines/reference/prefixUnaryOperatorsOnExportedVariables(target=es2015).errors.txt
error TS5107: Option 'module=System' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
prefixUnaryOperatorsOnExportedVariables.ts(19,5): error TS2873: This kind of expression is always falsy.


!!! error TS5107: Option 'module=System' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== prefixUnaryOperatorsOnExportedVariables.ts (1 errors) ====
    export var x = false;
    export var y = 1;
    if (!x) {
        
    }
    
    if (+x) {
        
    }
    
    if (-x) {
        
    }
    
    if (~x) {
        
    }
    
    if (void x) {
        ~~~~~~
!!! error TS2873: This kind of expression is always falsy.
        
    }
    
    if (typeof x) {
        
    }
    
    if (++y) {
        
    }